# whisper-finetune

./: .gitignore  README.md  conda-env.yaml  pyproject.toml
.devcontainer/: devcontainer.json
docker-dev/: Dockerfile
docker/dev/: Dockerfile
scripts/: download_noise.sh
whisper_cs/: train.ipynb
whisper_finetune/: __main__.py  augment.py  metrics.py  preprocess.py  train.py  utils.py
