[tool.poetry]
name = "whisper-finetune"
version = "0.1.0"
description = "Fintetuning speech-to-text model Whisper"
authors = ["Marek Kadlcik <10684818+markcheeky@users.noreply.github.com>"]
license = "Topics"
readme = "README.md"
packages = [{include = "whisper_finetune"}]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
torch = "^1.13.0"
datasets = ">=2.6.1"
transformers = "^4.24.0"
librosa = "^0.9.2"
evaluate = ">=0.3.0"
jiwer = "^2.5.1"
gradio = "^3.9"
torchaudio = "^0.13.0"
wandb = "^0.13.5"
augly = {extras = ["audio"], version = "^1.0.0"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"
ipywidgets = "^8.0.2"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.990"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
